plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "17.0.12"
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
}

application {
    getMainClass().set('agh.darwinworld.App')
}

tasks.named('run') {
    jvmArgs += [
            '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED'
    ]
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'net.java.dev.jna:jna:5.13.0'
    implementation 'net.java.dev.jna:jna-platform:5.13.0'
}

test {
    useJUnitPlatform()
}